@@ -115,12 +115,23 @@ def initialize( context ):
                                      'CMFDefault',
                                      BASE)
 
-    context.registerClass( Portal.CMFSite
-                         , constructors=( Portal.manage_addCMFSiteForm
-                                        , Portal.manage_addCMFSite
+    from Products.CMFSetup.factory import addConfiguredSiteForm
+    from Products.CMFSetup.factory import addConfiguredSite
+
+    # Add factory for a site which follows a profile.  We specify
+    # meta_type and interfaces because we don't actually register a
+    # class here, only a factory.
+    context.registerClass( meta_type='CMF Site'
+                         , constructors=( addConfiguredSiteForm
+                                        , addConfiguredSite
                                         )
-                         , icon='portal.gif'
-                         )
+                         , permissions=( 'Add CMF Sites', )
+                         , interfaces=None
+                         ) 
+
+    # Since there is no "normal" class registration for Portal.CMFSite,
+    # the ZMI icons would disappear without the following icon registration
+    registerIcon(Portal.CMFSite, 'images/portal.gif', globals())
 
     registerIcon( DefaultWorkflow.DefaultWorkflowDefinition
                 , 'images/workflow.gif'
