@@ -1,5 +1,5 @@
 <h1 tal:replace="structure context/manage_page_header">PAGE HEADER</h1>
-<h2 tal:define="form_title string:Add Configured CMF Site"
+<h2 tal:define="form_title string:Add CMF Site"
     tal:replace="structure context/manage_form_title">FORM TITLE</h2>
 
 <p class="form-help">Please select ID and configuration for the new site.</p>
